# HPCTrainingExamples

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md
Affinity/: README.md  affinity_exercises.md
Affinity/NumaWindowsTools/: CMakeLists.txt  NumaWindowsTools.cpp  NumaWindowsTools.h  README.md  main.cpp  readme.md
HIP/Stream_Overlap/0-Orig/: CMakeLists.txt  README.md  compute_comm_overlap.hip
HIP/dgemm/: CMakeLists.txt  README.md
HIP/dgemm/src/: CMakeLists.txt  args.h  darray.h  dgemm.cpp  dgemm.h  main.cpp  matrix.h  serialize.cpp  serialize.h  timer.h  utils.cpp  utils.h
HIP/vectorAdd/: CMakeLists.txt  Makefile  README  README.frontier  hip_batch_frontier.sh  hip_batch_lumi.sh  hip_cmakelists_batch.sh  hip_makefile_batch.sh  vectoradd.hip  vectoradd_hip.cpp
HIPStdPar/CXX/ShallowWater_Orig/: CMakeLists.txt  ShallowWater.c  ShallowWater.h  memory.c  timer.h
HIPStdPar/CXX/ShallowWater_Ver1/: CMakeLists.txt  ShallowWater.cpp  Var2D.hpp
Kokkos/kokkos_check_apu_enabled/: CMakeLists.txt  kokkos_check_apu_enabled.cpp
MPI-examples/GhostExchange/GhostExchange3D_ArrayAssign/Orig/: CMakeLists.txt  GhostExchange.cc  malloc3D.c  malloc3D.h
MPI-examples/GhostExchange/GhostExchange_ArrayAssign/Orig/: CMakeLists.txt  GhostExchange.cc  README.md
MPI-examples/GhostExchange/GhostExchange_ArrayAssign/Ver3/: CMakeLists.txt  GhostExchange.cc  README.md  timer.h
MPI-examples/GhostExchange/GhostExchange_ArrayAssign/Ver5/: CMakeLists.txt  GhostExchange.cc  README.md  malloc2D.c
ManagedMemory/Kokkos_Code/: CMakeLists.txt  kokkos_code.cc
ManagedMemory/Raja_Code/: CMakeLists.txt  raja_code.cc
Pragma_Examples/OpenMP/C/BuildExamples/: CMakeLists.txt  Makefile  README.md  openmp_code.c
Pragma_Examples/OpenMP/CXX/kernel_pragmas/: CMakeLists.txt  README.md  kernel1.cc  kernel2.cc  kernel3.cc  runit.sh
Pragma_Examples/OpenMP/CXX/memory_pragmas/: CMakeLists.txt  ENVIRON.md  README.md  mem1.cc  mem10.cc  mem11.cc  mem12.cc  mem2.cc  mem3.cc  mem4.cc  mem5.cc  mem6.cc  mem7.cc  mem8.cc  mem9.cc  runit.sh
Pragma_Examples/OpenMP/Fortran/: CMakeLists.txt  Makefile  README.md
Pragma_Examples/OpenMP/Fortran/1_saxpy/: README.md
Pragma_Examples/OpenMP/Fortran/1_saxpy/0_saxpy_portyourself/: Makefile  saxpy.F90
Pragma_Examples/OpenMP/Fortran/1_saxpy/0_saxpy_serial_portyourself/: saxpy.F90
Pragma_Examples/OpenMP/Fortran/1_saxpy/1_saxpy_omptarget/: Makefile  saxpy.F90
Pragma_Examples/OpenMP/Fortran/2_freduce/: README.md
Pragma_Examples/OpenMP/Fortran/2_reduction/: README.md
Pragma_Examples/OpenMP/Fortran/2_vecadd/: README.md
Pragma_Examples/OpenMP/Fortran/3_reduction/: README.md
Pragma_Examples/OpenMP/Fortran/3_vecadd/: README.md
Pragma_Examples/OpenMP/Fortran/4_reduction_scalar/: README.md
Pragma_Examples/OpenMP/Fortran/4_reduction_scalars/: README.md
Pragma_Examples/OpenMP/Fortran/5_device_routine/: README.md
Pragma_Examples/OpenMP/Fortran/5_device_routines/: README.md
Pragma_Examples/OpenMP/Fortran/5_reduction_array/: README.md
Pragma_Examples/OpenMP/Fortran/6_derived_types/: Makefile  README.md  dtype_derived_type.f  dtype_derived_type_automap.f  dtype_derived_type_usm.f  dtype_pointer.f  dtype_scalar_members.f
Pragma_Examples/OpenMP/Fortran/6_device_routine/: README.md
Pragma_Examples/OpenMP/Fortran/6_device_routines/: README.md
Pragma_Examples/OpenMP/Fortran/7_derived_types/: Makefile  README.md  dtype_derived_type.f  dtype_derived_type_automap.f  dtype_derived_type_usm.f  dtype_pointer.f  dtype_scalar_members.f
Pragma_Examples/OpenMP/Fortran/7_jacobi/: README.md
Pragma_Examples/OpenMP/Fortran/8_interop/: Makefile  README.md  driver.f90
Pragma_Examples/OpenMP/Fortran/8_jacobi/: README.md
Pragma_Examples/OpenMP/Fortran/9_interop/: Makefile  README.md  driver.f90  kernel.cpp
Pragma_Examples/OpenMP/Fortran/9_reduction_array/: README.md
Pragma_Examples/OpenMP/Fortran/Atomic/: Makefile  atomic.F
Pragma_Examples/OpenMP/Fortran/BuildExamples/: CMakeLists.txt  Makefile  README.md  openmp_code.F90
Pragma_Examples/OpenMP/Fortran/Common_blocks_on_device/: README.md
Pragma_Examples/OpenMP/Fortran/ComplexComputeConstructs/: Makefile  README.md  saxpy_gpu_collapse.F90  saxpy_gpu_parallel_do.F90  saxpy_gpu_paralleldo.F90  saxpy_gpu_split_level.F90  saxpy_gpu_target.F90  saxpy_gpu_target_parallel_do.F90  saxpy_gpu_target_teams.F90  saxpy_gpu_target_teams_distribute.F90
Pragma_Examples/OpenMP/Fortran/GPU_Aware_MPI/: test_gpu_aware_mpi.f90
Pragma_Examples/OpenMP/Fortran/Nowait/: Makefile  README.md  nowait.F90
Pragma_Examples/OpenMP/Fortran/SingleLineConstructs/: Makefile  README.md  saxpy_cpu.F90  saxpy_gpu_collapse.F90  saxpy_gpu_do_concurrent_device.F90  saxpy_gpu_do_concurrent_host.F90  saxpy_gpu_loop.F90  saxpy_gpu_paralleldo.F90  saxpy_gpu_singleunit_autoalloc.F90  saxpy_gpu_singleunit_dynamic.F90
Pragma_Examples/OpenMP/Fortran/Submodules/: Makefile  README.md  impl.f90  interface.f90
Pragma_Examples/OpenMP/Fortran/complex_saxpy/: Makefile  complex_saxpy.f
Pragma_Examples/OpenMP/Fortran/derived_types/: Makefile  dtype_derived_type.f  dtype_mapper.f  dtype_pointer.f  dtype_scalar_members.f
Pragma_Examples/OpenMP/Fortran/do_concurrent/: README.md
Pragma_Examples/OpenMP/Fortran/freduce/: Makefile  freduce.F
Pragma_Examples/OpenMP/Fortran/gpu_port_workshare/: Makefile  offload_workshare_v1.F  test  test.F
Pragma_Examples/OpenMP/Fortran/jacobi/: Makefile  boundary.f90  jacobi.f90  laplacian.f90  norm.f90  update.f90
Pragma_Examples/OpenMP/Fortran/memory_pragmas/: CMakeLists.txt  mem1.F90  mem2.F90  mem3.F90  mem4.F90  mem5.F90  mem7.F90  mem8.F90
Pragma_Examples/OpenMP/Fortran/reduction_array/: reduction_array.F
Pragma_Examples/OpenMP/Fortran/reduction_scalar/: Makefile  reduction_scalar.F
Pragma_Examples/OpenMP/Fortran/teams_endloop/: Makefile  teams_endloop.f
Pragma_Examples/OpenMP/Fortran/teamsloop/: Makefile  teamsloop.f
Pragma_Examples/OpenMP/Fortran/vecadd/: Makefile  ftimers.F  vecadd.F
rocm-blogs-codes/hipify/: AUTHORS  CMakeLists.txt  README.md  gpu_macros.h
rocm-blogs-codes/hipify/src/: Makefile
(+2450 files in other folders)
